- remove reliance on ant-contrib being externally installed on the system. - Remove customer repo related build targets which doesn't exist now and which is converted to different zimlets now

--- a/WebRoot/messages/ZaMsg.properties
+++ b/WebRoot/messages/ZaMsg.properties
@@ -2780,3 +2780,4 @@ ERROR_RPExists = Policy "{0}" already exists.
 multiple_servers = multiple servers
 ERROR_INVALID_FILE_NAME = Invalid file name. Use browse button to select a valid file.
 
+zimbraLoginMetaDesc = Zimbra provides open source server and client software for messaging and collaboration. To find out more visit https://www.zimbra.com.
