ZCS-4465 Remove admin common package - Make sure admin common package gets removed when installing admin console pkg - Move code required by admin console to it's repository - Removed not needed files from admin console repo

--- a/build.xml
+++ b/build.xml
@@ -871,7 +871,7 @@
                  classpathref='class.path'
                 />
 
-        <fileset id='jam-files.fileset' dir='${build.js.dir}' includes='*.js' excludes='*_all.js,TinyMCE*'/>
+        <fileset id='jam-files.fileset' dir='${build.js.dir}' includes='*.js' excludes='*_all.js'/>
         <pathconvert property="jam-files.list" refid="jam-files.fileset" pathsep=','>
             <chainedmapper>
                 <flattenmapper/>
