--- a/build.xml
+++ b/build.xml
@@ -1404,8 +1404,17 @@ ext = BeanUtils.cook(ext);
         </copy>
     </target>
 
+    <property name="package.revision" value="1" />
+    <property name="package.version"
+      value="${zimbra.buildinfo.majorversion}.${zimbra.buildinfo.minorversion}.${zimbra.buildinfo.microversion}"/>
+
     <target name="pkg" depends="clean-pkg, admin-war">
-        <exec dir="." executable="./pkg-builder.pl" failonerror="true"/>
+        <exec dir="." executable="./pkg-builder.pl" failonerror="true">
+          <arg value="-v"/>
+          <arg value="${package.version}"/>
+          <arg value="-r"/>
+          <arg value="${package.revision}"/>
+        </exec>
     </target>
 
     <target name="clean-pkg">
