--- a/WebRoot/messages/ZmMsg.properties
+++ b/WebRoot/messages/ZmMsg.properties
@@ -1987,6 +1987,7 @@ localeName_sv = Swedish
 localeName_tr = Turkish
 localeName_th = Thai
 localeName_uk = Ukrainian
+localeName_ta = Tamil
 
 localFolders = Local Folders
 localPart = local part
