ZCS-8012 : Upgrade jquery in zm-admin-console - Moving jquery and clipboard code to its own modules - Not minifying the 3rd party code using yiucomposser instead using the minified version that is shipped with the 3rd party lib - Loading Jquery is loaded before itself has it is happening now - Upgrading jquery version to 3.4.1 - loadiing jquery_all file when calling admin.jsp

--- a/build.xml
+++ b/build.xml
@@ -81,6 +81,7 @@
     <property name='nodebug.ext' value='.nodebug'/>
     <property name="jsmin.ext" value='.min'/>
     <property name="compress.ext" value='.zgz'/>
+    <property name='compressoutput.ext' value='.out'/>
     <property name='compresserror.ext' value='.err'/>
 
         <!-- THIRDPARTY INTEGRATION -->
@@ -88,7 +89,7 @@
 
     <property name="modernizr.version" value="2.8.3"/>
     <property name="yui.version" value="2.7.0"/>
-    <property name="jquery.version" value="1.11.0"/>
+    <property name="jquery.version" value="3.4.1"/>
 
 	<!-- customize admin skin -->
 	<if>
@@ -131,7 +132,7 @@
         <property name='common.jam.excludes' value='${custom.jam.excludes},'/>
         <property name='common.build.web.includes' value='${custom.build.web.includes},**'/>
         <property name='common.build.web.excludes'
-                  value='${custom.build.web.excludes},js/*${depends.ext},js/*${nodebug.ext},js/*${jsmin.ext},js/*${license.ext}'/>
+                  value='${custom.build.web.excludes},js/*${depends.ext},js/*${nodebug.ext},js/*${jsmin.ext},js/*${license.ext},js/*${compressoutput.ext}'/>
         <property name='common.webinf.includes' value='${custom.webinf.includes},**'/>
         <property name='common.webinf.excludes' value='${custom.webinf.excludes},web.*'/>
     </target>
@@ -1035,31 +1036,44 @@ ext = BeanUtils.cook(ext);
                             <substitution expression=" "/>
                             <fileset file="@{var}${nodebug.ext}"/>
                         </replaceregexp>
-                        <echo>Minimizing to @{var}${jsmin.ext}</echo>
-	                    <try>
-	                        <block>
-                                <java jar="${build.tmp.dir}/yuicompressor-2.4.8.jar" fork="true" failonerror="true"
-		                              output="${build.dir}/yui-compress.out">
-                                    <!-- Add error="@{var}${compresserror.ext}" in java task if *.err files need to be generated. -->
-		                            <arg value="--line-break"/>
-		                            <arg value="0"/>
-		                            <arg value="--type"/>
-		                            <arg value="js"/>
-		                            <arg value="-o"/>
-		                            <arg value="@{var}${jsmin.ext}"/>
-		                            <arg value="@{var}${nodebug.ext}"/>
-                                    <arg value="--verbose"/>
-		                        </java>
-	                        </block>
-		                    <catch>
-			                    <antcall target='compress-test-files'>
-				                    <param name='filename' value='@{var}${depends.ext}' />
-			                    </antcall>
-		                    </catch>
-		                    <finally>
-			                    <!-- do nothing -->
-		                    </finally>
-	                    </try>
+                        <if>
+                            <or>
+                                <equals arg1="@{var}" arg2="${build.js.dir}/JQuery_all.js" />
+                                <equals arg1="@{var}" arg2="${build.js.dir}/Clipboard_all.js" />
+                            </or>
+                            
+                            <then>
+                                <echo>Copying thirdparty library file to @{var}${jsmin.ext}</echo>
+                                <copy tofile="@{var}${jsmin.ext}" file="@{var}"/>
+                            </then>
+                            <else>
+                                <try>
+                                    <block>
+                                        <echo>Minimizing to @{var}${jsmin.ext}</echo>
+                                        <java jar="${build.tmp.dir}/yuicompressor-2.4.8.jar" fork="true" failonerror="true"
+                                            output="@{var}${compressoutput.ext}">
+                                            <!-- Add error="@{var}${compresserror.ext}" in java task if *.err files need to be generated. -->
+                                            <arg value="--line-break"/>
+                                            <arg value="0"/>
+                                            <arg value="--type"/>
+                                            <arg value="js"/>
+                                            <arg value="-o"/>
+                                            <arg value="@{var}${jsmin.ext}"/>
+                                            <arg value="@{var}${nodebug.ext}"/>
+                                            <arg value="--verbose"/>
+                                        </java>
+                                    </block>
+                                    <catch>
+                                        <antcall target='compress-test-files'>
+                                            <param name='filename' value='@{var}${depends.ext}' />
+                                        </antcall>
+                                    </catch>
+                                    <finally>
+                                        <!-- do nothing -->
+                                    </finally>
+                                </try>
+                            </else>
+                        </if>
                         <echo>Prepending Copyright to @{var}${license.ext}</echo>
                         <concat destfile="@{var}${license.ext}" fixlastline="true">
                             <header filtering="no" trimleading="yes">
@@ -1383,7 +1397,14 @@ ext = BeanUtils.cook(ext);
         <unzip src="${build.tmp.dir}/jquery-${jquery.version}.jar" dest="${build.tmp.dir}/jquery" overwrite="true" />
 
         <copy todir="${3rdparty.dir}/jquery">
-            <fileset dir="${build.tmp.dir}/jquery/META-INF/resources/webjars/jquery/${jquery.version}" />
+            <fileset dir="${build.tmp.dir}/jquery/META-INF/resources/webjars/jquery/${jquery.version}" includes="*.js" excludes="webjars-requirejs.js" />
+            <scriptmapper language="javascript">
+                // replace dots with underscores in JS file names, retaining the suffix
+                if (/\.js$/.test(source)) {
+                  source = source.substr(0, source.length - 3).replace(/\./g, '_') + '.js';
+                }
+                self.addMappedName(source);
+            </scriptmapper>
         </copy>
     </target>
 
@@ -1394,7 +1415,14 @@ ext = BeanUtils.cook(ext);
         <unzip src="${build.tmp.dir}/modernizr-${modernizr.version}.jar" dest="${build.tmp.dir}/modernizr" overwrite="true" />
 
         <copy todir="${3rdparty.dir}/modernizr">
-            <fileset dir="${build.tmp.dir}/modernizr/META-INF/resources/webjars/modernizr/${modernizr.version}" />
+            <fileset dir="${build.tmp.dir}/modernizr/META-INF/resources/webjars/modernizr/${modernizr.version}" includes="*.js" />
+            <scriptmapper language="javascript">
+                // replace dots with underscores in JS file names, retaining the suffix
+                if (/\.js$/.test(source)) {
+                  source = source.substr(0, source.length - 3).replace(/\./g, '_') + '.js';
+                }
+                self.addMappedName(source);
+            </scriptmapper>
         </copy>
     </target>
 
