--- a/build.xml
+++ b/build.xml
@@ -87,7 +87,7 @@
     <property name="3rdparty.dir" value="${build.js.dir}/ajax/3rdparty" />
 
     <property name="modernizr.version" value="2.8.3"/>
-    <property name="yui.version" value="2.7.0"/>
+    <property name="yui.version" value="2.9.0-alfresco-20140211"/>
     <property name="jquery.version" value="1.11.0"/>
 
 	<!-- customize admin skin -->
@@ -140,7 +140,7 @@
         <property name='build.admin' value='true'/>
         <property name='deploy.app' value='zimbraAdmin'/>
         <property name='skins.dir' value='${web.dir}/admin_skins'/>
-        <property name='web.includes' value='${common.web.includes},yui/2.7.0/**'/>
+        <property name='web.includes' value='${common.web.includes},yui/2.9.0-alfresco-20140211/**'/>
         <property name='web.excludes' value='${common.web.excludes}'/>
         <property name='jsp.includes' value='${common.jsp.includes}'/>
         <property name='jsp.excludes' value='${common.jsp.excludes}'/>
