PREAPPS-4311: Removed standard option and added modern option from user preferences dropdown list.

--- a/WebRoot/messages/ZaMsg.properties
+++ b/WebRoot/messages/ZaMsg.properties
@@ -1550,8 +1550,8 @@ LBL_fontFamilyWide = Wide
 
 AptVisibilityPublic = Public
 AptVisibilityPrivate = Private
-clientAdvanced = Advanced (Ajax)
-clientStandard = Standard (HTML)
+clientClassic = Classic
+clientModern = Modern
 CalViewDay = Day
 CalViewWeek = Week
 CalViewWorkWeek = Work week
