--- a/build.xml
+++ b/build.xml
@@ -90,6 +90,7 @@
     <property name="modernizr.version" value="2.8.3"/>
     <property name="yui.version" value="2.7.0"/>
     <property name="jquery.version" value="3.4.1"/>
+    <property name="chartjs.version" value="2.9.3"/>
 
 	<!-- customize admin skin -->
 	<if>
@@ -197,6 +198,7 @@
         </sync>
 
         <antcall target="jquery" />
+        <antcall target="chartjs" />
         <antcall target="modernizr" />
         <antcall target="yui" />
     </target>
@@ -1040,6 +1042,7 @@ ext = BeanUtils.cook(ext);
                             <or>
                                 <equals arg1="@{var}" arg2="${build.js.dir}/JQuery_all.js" />
                                 <equals arg1="@{var}" arg2="${build.js.dir}/Clipboard_all.js" />
+                                <equals arg1="@{var}" arg2="${build.js.dir}/Chartjs_all.js" />
                             </or>
                             
                             <then>
@@ -1402,6 +1405,24 @@ ext = BeanUtils.cook(ext);
                 // replace dots with underscores in JS file names, retaining the suffix
                 if (/\.js$/.test(source)) {
                   source = source.substr(0, source.length - 3).replace(/\./g, '_') + '.js';
+                }
+                self.addMappedName(source);
+            </scriptmapper>
+        </copy>
+    </target>
+
+    <!-- CHARTJS Library -->
+    <target name="chartjs" depends="resolve">
+        <ivy:install organisation="org.webjars" module="chartjs" revision="${chartjs.version}" settingsRef="dev.settings" from="chain-resolver" to="build-tmp" overwrite="true" transitive="true" />
+
+        <unzip src="${build.tmp.dir}/chartjs-${chartjs.version}.jar" dest="${build.tmp.dir}/chartjs" overwrite="true" />
+
+        <copy todir="${3rdparty.dir}/chartjs">
+            <fileset dir="${build.tmp.dir}/chartjs/META-INF/resources/webjars/chartjs/${chartjs.version}" includes="*.js" excludes="webjars-requirejs.js" />
+            <scriptmapper language="javascript">
+                // replace dots with underscores in JS file names, retaining the suffix
+                if (/\.js$/.test(source)) {
+                    source = source.substr(0, source.length - 3).replace(/\./g, '_') + '.js';
                 }
                 self.addMappedName(source);
             </scriptmapper>
