--- a/WebRoot/messages/ZaMsg.properties
+++ b/WebRoot/messages/ZaMsg.properties
@@ -2761,6 +2761,16 @@ EditWarningAcceptMsg = Cannot change type of volume {0} because it is the curren
 
 LBL_Treeheader_clearHistory = Clear History
 
+TABT_Mobile = Mobile
+MB_Registered_Devices = Registered Devices
+MB_Email_Address_col = Email Address
+MB_Last_Login_col = Last Login
+MB_Device_col = Device
+MB_Device_Id_col = Device ID
+MB_Status_col = Status
+MB_Eas_col = EAS
+MB_Server_col = Server
+
 TABT_RetentionPolicy = Retention Policy
 CLV_Policy_Name_col = Policy Name
 CLV_Policy_Retention_col = Retention Range
