--- a/WebRoot/messages/ZaMsg.properties
+++ b/WebRoot/messages/ZaMsg.properties
@@ -2770,6 +2770,9 @@ MB_Device_Id_col = Device ID
 MB_Status_col = Status
 MB_Eas_col = EAS
 MB_Server_col = Server
+MB_But_Suspend = Suspend Sync
+MB_But_Resume = Resume Sync
+
 
 TABT_RetentionPolicy = Retention Policy
 CLV_Policy_Name_col = Policy Name
