ZCS-10113 : Allow user to disable Web, POP3, and IMAP.
Adding translation for other languages.

--- a/WebRoot/messages/ZaMsg.properties
+++ b/WebRoot/messages/ZaMsg.properties
@@ -1243,6 +1243,7 @@ NAD_MonitorHostServer = Monitor host server:
 NAD_GeneralOptions = General Options
 NAD_MailOptions = Mail Options
 NAD_MailOptionsStandardClient = Standard (HTML) client
+NAD_PopImapOptions = POP/IMAP Options
 NAD_ContactsOptions = Contacts Options
 NAD_CalendarOptions = Calendar Options
 NAD_MailOptionsSending = Sending mail
@@ -1406,6 +1407,7 @@ LBL_zimbraFeatureFiltersEnabled = Mail Filters
 LBL_zimbraFeatureMailForwardingEnabled = Allow the user to specify a forwarding address
 LBL_zimbraImapEnabled = IMAP access
 LBL_zimbraPop3Enabled = POP3 access
+LBL_zimbraFeatureWebClientEnabled = Web Client access
 LBL_zimbraExternalImapEnabled = External IMAP access
 LBL_zimbraExternalPop3Enabled = External POP access
 LBL_zimbraFeatureSharingEnabled = Sharing
@@ -1478,6 +1480,8 @@ LBL_zimbraPrefReplyIncludeOriginalText = When replying, include original text
 LBL_zimbraPrefForwardIncludeOriginalText = When forwarding, include original text
 LBL_zimbraPrefComposeInNewWindow = Always compose in new window
 LBL_zimbraPrefForwardReplyInOriginalFormat = Reply/forward using format of the original message
+LBL_zimbraPrefImapEnabled = Enable IMAP access
+LBL_zimbraPrefPop3Enabled = Enable POP3 access
 LBL_zimbraPrefAutoAddAddressEnabled = Enable automatic adding of contacts
 LBL_zimbraPrefMailItemsPerPage = Number of items to display per page:
 MSG_zimbraPrefMailItemsPerPage = Number of items to display per page
