--- a/WebRoot/messages/ZaMsg.properties
+++ b/WebRoot/messages/ZaMsg.properties
@@ -2772,6 +2772,8 @@ MB_Eas_col = EAS
 MB_Server_col = Server
 MB_But_Suspend = Suspend Sync
 MB_But_Resume = Resume Sync
+MB_But_Wipe = Wipe Device
+
 
 
 TABT_RetentionPolicy = Retention Policy
