--- a/WebRoot/messages/ZaMsg.properties
+++ b/WebRoot/messages/ZaMsg.properties
@@ -2378,6 +2378,12 @@ BUSY_GET_RETENTION_POLICIES = Getting retention polices ...
 BUSY_CREATE_RETENTION_POLICIES = Creating retention polices ...
 BUSY_DELETE_RETENTION_POLICIES = Deleting retention polices ...
 BUSY_MODIFY_RETENTION_POLICIES = Modifying retention polices ...
+BUSY_GETTING_SYNC_DEVICES = Getting synced devices ...
+BUSY_QUARANTINE_SYNC_DEVICES = Suspending synced devices ...
+BUSY_RESUMING_SYNC_DEVICES = Allowing synced devices to resume...
+BUSY_REMOVING_SYNC_DEVICES = Removing synced devices ...
+BUSY_RESETING_SYNC_DEVICES = Reseting synced devices ...
+BUSY_WIPING_SYNC_DEVICES = Wiping synced devices ...
 
 UTIL_INVALID_LIFETIME = {0} is an invalid lifetime value. It must start with digits and end with the letter of smhd.
 
