--- a/WebRoot/messages/ZaMsg.properties
+++ b/WebRoot/messages/ZaMsg.properties
@@ -2786,12 +2786,17 @@ MB_Eas_col = EAS
 MB_But_Suspend = Suspend Sync
 MB_But_Resume = Resume Sync
 MB_But_Wipe = Wipe Device
-MB_Need_Prov = Needs provisioning
+MB_But_Wipe_Cancel = Cancel Wipe
+MB_But_Block = Block
+MB_Waiting = Waiting for device
 MB_Active = Active
 MB_Suspended = Suspended
 MB_Wipe_ACK = Wipe pending
 MB_Wipe_Comp = Wipe completed
 MB_Blocked = Blocked
+BUSY_BLOCKING_SYNC_DEVICES = Blocking synced devices ...
+BUSY_CANCELLING_WIPE = Canceling wipe operation ...
+MB_But_Disconnect = Disconnect
 
 TABT_RetentionPolicy = Retention Policy
 CLV_Policy_Name_col = Policy Name
