ZCS-10415 : Allow admin to configure disallowed attachment size/types.
Added facility to alter these attributes.
zimbraFileUploadBlockedFileTypes - Commonly blocked file types for uploading.
zimbraFeatureFileTypeUploadRestrictionsEnabled - Enable/Disable blocked file types set in zimbraFileUploadBlockedFileTypes for uploading.
These attributes are availble at account and cos levels.
Adding changes for FileUploadMaxSize and FileUploadMaxSizePerFile.
Fix comma-separated-extension-string to array for cos/account.

--- a/WebRoot/messages/ZaMsg.properties
+++ b/WebRoot/messages/ZaMsg.properties
@@ -893,6 +893,10 @@ MSG_zimbraMailSignatureMaxLength = Maximum length of mail signature
 NAD_Attach_RemoveAttachmentsByExt = Reject messages with attachment extensions:
 NAD_Attach_NewExtension = New extension:
 NAD_Attach_AddExtension = Add
+LBL_AttachmentRestrictionsEnabled = Enable attachment upload restrictions
+LBL_AttachmentBlockedFileTypes = Restricted attachment file types
+LBL_zimbraMailAttachmentMaxSize = Maximum size in bytes for all attachments in an e-mail
+LBL_FileUploadMaxSizePerFile = Maximum size in bytes for each attachment
 
 Global_MTA_AuthenticationGrp = Authentication
 Global_MTA_NetworkGrp = Network
