--- a/WebRoot/messages/ZaMsg.properties
+++ b/WebRoot/messages/ZaMsg.properties
@@ -2774,6 +2774,8 @@ BUSY_RESUMING_SYNC_DEVICES = Allowing synced devices to resume...
 BUSY_REMOVING_SYNC_DEVICES = Removing synced devices ...
 BUSY_RESETING_SYNC_DEVICES = Reseting synced devices ...
 BUSY_WIPING_SYNC_DEVICES = Wiping synced devices ...
+BUSY_REMOVING_SYNC_ACCOUNT = Removing synced account from device ...
+BUSY_CANCELLING_ACCOUNT_WIPE = Canceling Account wipe operation ...
 
 TABT_Mobile = Mobile
 MB_Registered_Devices = Registered Devices
@@ -2787,6 +2789,8 @@ MB_But_Suspend = Suspend Sync
 MB_But_Resume = Resume Sync
 MB_But_Wipe = Wipe Device
 MB_But_Wipe_Cancel = Cancel Wipe
+MB_But_Remove_Account = Remove Account
+MB_But_Remove_Account_Cancel = Cancel Remove Account
 MB_But_Block = Block
 MB_Waiting = Waiting for device
 MB_Active = Active
@@ -2794,9 +2798,13 @@ MB_Suspended = Suspended
 MB_Wipe_ACK = Wipe pending
 MB_Wipe_Comp = Wipe completed
 MB_Blocked = Blocked
+MB_Remove_Account_ACK = Remove account pending
+MB_Remove_Account_Comp = Account removed
 BUSY_BLOCKING_SYNC_DEVICES = Blocking synced devices ...
 BUSY_CANCELLING_WIPE = Canceling wipe operation ...
 MB_But_Disconnect = Disconnect
+BUSY_REMOVING_SYNC_ACCOUNT = Removing synced account from device ...
+BUSY_CANCELLING_ACCOUNT_WIPE = Canceling Account wipe operation ...
 
 TABT_RetentionPolicy = Retention Policy
 CLV_Policy_Name_col = Policy Name
