ZCS-10831 : Org Chart | Added manager field attr and drop down in admin consol contact info tab
Org Chart | converted arrow to normal functions and removed optional chaining
Adding the manager field while creating new account as well.
Fixed issue occurred while creating new account with manager field.

--- a/WebRoot/messages/ZaMsg.properties
+++ b/WebRoot/messages/ZaMsg.properties
@@ -1181,6 +1181,7 @@ NAD_mobile = Mobile:
 NAD_pager = Pager:
 NAD_company = Company:
 NAD_title = Job Title:
+NAD_manager = Manager:
 NAD_facsimileTelephoneNumber = Fax Number:
 NAD_zimbraPhoneticCompany = Phonetic Company:
 NAD_city = City:
