ZCS-11010 : OnlyOffice/Zulip feature configuration management.
Adding "Document Editing" checkbox under "General Features" section for account edit.
Adding "Document Editing" checkbox under "General Features" section for new account.
Adding "Document Editing" checkbox under "General Features" section for COS edit.
Adding "Document Editing" checkbox under "General Features" section for new COS.
Adding "Chat" checkbox under "General Features" section for account edit.
Adding "Chat" checkbox under "General Features" section for new account.
Adding "Chat" checkbox under "General Features" section for COS edit.
Adding "Chat" checkbox under "General Features" section for new COS.

--- a/WebRoot/messages/ZaMsg.properties
+++ b/WebRoot/messages/ZaMsg.properties
@@ -1432,6 +1432,7 @@ LBL_zimbraPublicSharingEnabled = Public sharing
 LBL_zimbraFeatureGalAutoCompleteEnabled = Autocomplete from GAL
 LBL_zimbraFeatureImportFolderEnabled = Import
 LBL_zimbraFeatureExportFolderEnabled = Export
+LBL_zimbraFeatureDocumentEditingEnabled = Document Editing
 LBL_zimbraDumpsterEnabled = Dumpster folder
 MSG_zimbraDumpsterEnabled = Dumpster folder
 LBL_zimbraDumpsterUserVisibleAge = Visibility lifetime in dumpster for end user:
@@ -2559,6 +2560,9 @@ LBL_zimbraPrefAutoSaveDraftInterval = Draft auto save interval:
 NAD_zimbraSMIMEFeature  = S/MIME Features
 LBL_zimbraFeatureManageSMIMECertificateEnabled = Allow end user to publish and remove S/MIME certificates
 LBL_zimbraFeatureSMIMEEnabled = Enable S/MIME
+
+NAD_zimbraChatFeature  = Chat Features
+LBL_zimbraFeatureZulipChatEnabled = Zulip Chat
 
 externalAccountNote = This account uses external mail transport
 
