ZCS-1426 ZRFE-210 Add zimbraAdminSieveScriptAfter in Cos->Advanced

--- a/WebRoot/messages/ZaMsg.properties
+++ b/WebRoot/messages/ZaMsg.properties
@@ -1084,11 +1084,12 @@ NAD_LegalInterceptGrouper = Legal Intercept
 LBL_zimbraInterceptAddress = Legal Intercept Address:
 LBL_zimbraInterceptSendHeadersOnly = Legal Intercept Headers Only:
 
-NAD_AdminSieveGrouper = Sieve script
-Alert_Sieve = This Sieve script is applied before end user filter rules and can only be viewed and modified by admins.
+NAD_AdminSieveGrouper = Sieve filter rules
+Alert_Sieve = These Sieve filter rules can only be viewed and modified by administrators.
 LBL_zimbraSieveRejectMailEnabled = Sieve "reject" action:
 LBL_zimbraSieveEditHeaderEnabled = Edit header commands:
-LBL_zimbraAdminSieveScriptBefore = Admin Sieve script before:
+LBL_zimbraAdminSieveScriptBefore = Sieve rules applied before end user filters:
+LBL_zimbraAdminSieveScriptAfter = Sieve rules applied after end user filters:
  
 NAD_AccountName = Account name:
 NAD_Email = Email:
