ZCS-11336 : Adding more changes.

--- a/WebRoot/messages/ZaMsg.properties
+++ b/WebRoot/messages/ZaMsg.properties
@@ -1370,6 +1370,7 @@ VM_CurrentVolumesGrpTitle = Assign Current Volumes
 VM_VolumesGrpTitle = Manage Volumes
 VM_VOLUME_Msg = Data
 VM_VOLUME_Index = Index
+VM_PoliciesGrpTitle = Storage Management Policies
 
 NAD_MS = ms
 NAD_Sec = seconds
