ZCS-11336 : Adding more code.

--- a/WebRoot/messages/ZaMsg.properties
+++ b/WebRoot/messages/ZaMsg.properties
@@ -1371,6 +1371,8 @@ VM_VolumesGrpTitle = Manage Volumes
 VM_VOLUME_Msg = Data
 VM_VOLUME_Index = Index
 VM_PoliciesGrpTitle = Storage Management Policies
+VM_PolicyItemsToMove = Items to move
+VM_PolicyOlderThan = Older thans
 
 NAD_MS = ms
 NAD_Sec = seconds
