--- a/WebRoot/messages/ZaMsg.properties
+++ b/WebRoot/messages/ZaMsg.properties
@@ -639,13 +639,13 @@ DLTBB_Delete_tt = Delete Distribution List
 DLTBB_Edit_tt = Edit Distribution List
 DLTBB_Cancel_tt = Cancel Distribution List creation
 
-SRVTBB_HSM = HSM
-SRVTBB_HSM_tt = Open HSM dialog to start an HSM Session
-HSM_Title = HSM
+SRVTBB_HSM = SM
+SRVTBB_HSM_tt = Open SM dialog to start an SM Session
+HSM_Title = SM
 HSM_Server_tt = \
-	Closing this dialog will not abort the HSM session. \
-	To check the status of the HSM session, bring back this dialog by clicking HSM button in the toolbar.
-HSM_COMPONENT_UNAVAILABLE = The server side HSM component is not installed.
+	Closing this dialog will not abort the SM session. \
+	To check the status of the SM session, bring back this dialog by clicking SM button in the toolbar.
+HSM_COMPONENT_UNAVAILABLE = The server side SM component is not installed.
 
 STATUSTBB_Failover = Failover
 STATUSTBB_Failover_tt = Failover server
@@ -707,8 +707,8 @@ Alert_AmavisdRestart = \
 	Changes to settings requires amavisd restart in order to take effect.
 Alert_HSM = \
 	<b>Note:</b> \
-	You can initiate an HSM session manually by pressing "Start HSM Session" button. \
-	HSM sessions can also be scheduled on servers through cron jobs. <br> \
+	You can initiate an SM session manually by pressing "Start HSM Session" button. \
+	SM sessions can also be scheduled on servers through cron jobs. <br> \
 
 Alert_InternalPassword = <b>Note:</b> These settings do not affect the passwords set by users in domains that \
 		are configured to use external authentication.
@@ -732,9 +732,9 @@ Alert_Flush_Theme_Cache =  <b>Note:</b> \
 
 Alert_Ngnix = <b>Note:</b> Changes to settings requires Ngnix restart in order to take effect.
 
-HSM_ProcessStatus = HSM Session is running.<br>{0} blobs moved. {1} mailboxes processed. {2} mailboxes remaining.
-HSM_StatusReport = Last HSM session was started on {0} and ended on {1}
-HSM_InfoUnavailable = Information on last HSM session is not available
+HSM_ProcessStatus = SM Session is running.<br>{0} blobs moved. {1} mailboxes processed. {2} mailboxes remaining.
+HSM_StatusReport = Last SM session was started on {0} and ended on {1}
+HSM_InfoUnavailable = Information on last SM session is not available
 
 SERTBB_New_tt = New server
 SERTBB_Edit_tt = Edit server
@@ -1905,7 +1905,7 @@ FAILED_MOVE_ALIAS = Failed to move alias
 FAILED_REINDEX = Reindexing failed. Error code {0}
 FAILED_REINDEX_DETAILS = Details:
 
-FAILED_HSM = HSM Session failed. Error code {0}
+FAILED_HSM = SM Session failed. Error code {0}
 FAILED_HSM_DETAILS = Details:
 
 ERROR_CODE = Error code:
