--- a/WebRoot/messages/ZaMsg.properties
+++ b/WebRoot/messages/ZaMsg.properties
@@ -1352,7 +1352,7 @@ VM_Warning_Changing_CurVolumePath = Warning! You are attempting to change the pa
 LBL_VM_VolumeName = Volume Name:
 VM_VolumeName = Volume Name
 LBL_VM_VolumeRootPath = Volume Root Path:
-VM_VolumeRootPath = Volume Root Path
+VM_VolumeRootPath = Volume Path or S3 Prefix
 LBL_VM_VolumeType= Volume Type:
 VM_VolumeType= Volume Type
 VM_VolumeCompressBlobs = Compress Blobs
