--- a/WebRoot/messages/ZaMsg.properties
+++ b/WebRoot/messages/ZaMsg.properties
@@ -1349,14 +1349,42 @@ Server_WrongPortWarning_OP2 = 2. I leave the value of {0} at {1}, I will change 
 Server_WrongPortWarning_OP3 = 3. Do not enable IMAP/POP proxy service.  
 # volume management
 VM_Warning_Changing_CurVolumePath = Warning! You are attempting to change the path of a volume that is currently in use. This may cause users to lose access to their messages.
-LBL_VM_VolumeName = Volume Name:
+TABT_VolumeTypePage = Volume type
+LBL_VM_VolumeTypeInternal = Internal
+VM_VolumeTypeInternal = Internal
+TABT_InternalVolumePage = Internal volume
+LBL_VM_VolumeTypeS3 = Amazon S3
+VM_VolumeTypeS3 = S3
+TABT_S3VolumePage = Amazon S3 compatible volume
+LBL_VM_NewS3Bucket = Add new S3 bucket
+TABT_S3BucketPage = New S3 bucket
+LBL_VM_VolumeTypeCeph = Ceph
+VM_VolumeTypeCeph = Ceph
+TABT_CephVolumePage = Ceph compatible volume
+LBL_VM_NewCephBucket = Add new Ceph bucket
+TABT_CephBucketPage = New Ceph bucket
+LBL_VM_VolumeTypeNASG = NetApp StorageGrid
+LBL_VM_VolumeName = Volume name
 VM_VolumeName = Volume Name
-LBL_VM_VolumeRootPath = Volume Root Path:
+LBL_VM_VolumeRootPath = Volume root path
+LBL_VM_VolumePrefix = Volume prefix
 VM_VolumeRootPath = Volume Path or S3 Prefix
-LBL_VM_VolumeType= Volume Type:
+LBL_VM_VolumeType = Volume type
 VM_VolumeType= Volume Type
+LBL_VM_S3CompatibleBucket = S3 compatible bucket
+LBL_VM_CephBucket = S3 compatible bucket
+LBL_VM_InfrequentAccess = Infrequent access
+LBL_VM_InfrequentAccessTreshold = Infrequent access threshold
+LBL_VM_IntelligentTiering = Intelligent tiering
+LBL_VM_BucketName = Bucket name
+LBL_VM_AccessKey = Access key
+LBL_VM_SecretAccessKey = Secret
+LBL_VM_DestinationPath = Destination path
+LBL_VM_URL = URL
+LBL_VM_Region = Region
+LBL_VM_TestBucket = Test Bucket
 VM_VolumeCompressBlobs = Compress Blobs
-LBL_VM_VolumeCompressThreshold = Compression Threshold:
+LBL_VM_VolumeCompressThreshold = Compression threshold
 VM_VolumeCompressThreshold = Compression Threshold
 VM_VolumeCompressThresholdBytes = {0} bytes
 VM_CurrentVolume = Current
