--- a/WebRoot/messages/ZaMsg.properties
+++ b/WebRoot/messages/ZaMsg.properties
@@ -1349,6 +1349,10 @@ Server_WrongPortWarning_OP2 = 2. I leave the value of {0} at {1}, I will change 
 Server_WrongPortWarning_OP3 = 3. Do not enable IMAP/POP proxy service.  
 # volume management
 VM_Warning_Changing_CurVolumePath = Warning! You are attempting to change the path of a volume that is currently in use. This may cause users to lose access to their messages.
+VM_VolumeTypeSelectTitle = Please select the type of volume you would like to create.
+VM_HSM_PrimaryMsg = Primary Data
+VM_HSM_SecMsg = Secondary Data
+VM_S3VolumeInfoText = HSM is compatible with \u0022Amazon S3 Standard - Infrequent Access\u0022 storage class, and will set any file larger than the Infrequent Access threshold to this class. For more information about Infrequent Access, please see the official Amazon S3 documentation.
 TABT_VolumeTypePage = Volume type
 LBL_VM_VolumeTypeInternal = Internal
 VM_VolumeTypeInternal = Internal
