chore: add link to AWS documentation

--- a/WebRoot/messages/ZaMsg.properties
+++ b/WebRoot/messages/ZaMsg.properties
@@ -1352,7 +1352,7 @@ VM_Warning_Changing_CurVolumePath = Warning! You are attempting to change the pa
 VM_VolumeTypeSelectTitle = Please select the type of volume you would like to create.
 VM_HSM_PrimaryMsg = Primary Data
 VM_HSM_SecMsg = Secondary Data
-VM_S3VolumeInfoText = HSM is compatible with \u0022Amazon S3 Standard - Infrequent Access\u0022 storage class, and will set any file larger than the Infrequent Access threshold to this class. For more information about Infrequent Access, please see the official Amazon S3 documentation.
+VM_S3VolumeInfoText = HSM is compatible with \u0022Amazon S3 Standard - Infrequent Access\u0022 storage class, and will set any file larger than the Infrequent Access threshold to this class. For more information about Infrequent Access, please see the <a href="https://aws.amazon.com/s3/storage-classes/" target="_blank">official Amazon S3 documentation.</a>
 TABT_VolumeTypePage = Volume type
 LBL_VM_VolumeTypeInternal = Internal
 VM_VolumeTypeInternal = Internal
