ZCS-11472: ceph bucket craeation merged with 11476

--- a/WebRoot/messages/ZaMsg.properties
+++ b/WebRoot/messages/ZaMsg.properties
@@ -1367,6 +1367,9 @@ VM_VolumeTypeCeph = Ceph
 TABT_CephVolumePage = Ceph compatible volume
 LBL_VM_NewCephBucket = Add new Ceph bucket
 TABT_CephBucketPage = New Ceph bucket
+TABT_NetAppStorageGridVolumePage = NetApp Storage Grid volume
+LBL_VM_NewNetAppStorageGridBucket = Add new bucket
+TABT_NetAppStorageGridBucketPage = New NetApp StorageGrid bucket
 LBL_VM_VolumeTypeNASG = NetApp StorageGrid
 LBL_VM_VolumeName = Volume name
 VM_VolumeName = Volume Name
