ZCS-11717: Change wrong tab name 'SM' to 'Storage Management'

--- a/WebRoot/messages/ZaMsg.properties
+++ b/WebRoot/messages/ZaMsg.properties
@@ -707,7 +707,7 @@ Alert_AmavisdRestart = \
 	Changes to settings requires amavisd restart in order to take effect.
 Alert_HSM = \
 	<b>Note:</b> \
-	You can initiate an SM session manually by pressing "Start HSM Session" button. \
+	You can initiate an SM session manually by pressing "Start SM Session" button. \
 	SM sessions can also be scheduled on servers through cron jobs. <br> \
 
 Alert_InternalPassword = <b>Note:</b> These settings do not affect the passwords set by users in domains that \
@@ -850,8 +850,8 @@ NAD_Tab_AUTH = Authentication
 NAD_Tab_POP = POP
 NAD_Tab_IMAP = IMAP
 NAD_Tab_Services = Services
-NAD_Tab_VolumeMgt = Volumes
-NAD_Tab_HSM = HSM
+NAD_Tab_VolumeMgt = Storage Management
+NAD_Tab_HSM = Storage Management
 NAD_Tab_ASAV = AS/AV
 NAD_Tab_Proxy = Proxy
 NAD_Tab_Bind_IP = IP Address Bindings
