ZBUG-3072: Comment added

--- a/WebRoot/messages/ZmMsg.properties
+++ b/WebRoot/messages/ZmMsg.properties
@@ -264,6 +264,7 @@ apptReminders = Appointment Reminder(s)
 apptReminderLabel = Show reminders:
 apptPastDueReminderLabel =  Show reminders for past-due meetings
 apptRemindNever = Never
+# Any change in apptRemindAtEventTime key should also be changed in atEventTime key in AjxMsg
 apptRemindAtEventTime = At time of event
 apptRemindNDaysBefore = {0,number} {0,choice,0#days|1#day|2#days} before
 apptRemindNMinutesBefore = {0,number} {0,choice,0#minutes|1#minute|2#minutes} before
