--- a/WebRoot/messages/ZaMsg.properties
+++ b/WebRoot/messages/ZaMsg.properties
@@ -1208,7 +1208,7 @@ NAD_ForwardTo = Forward mail to
 NAD_COSName = COS Name
 NAD_PwdLocked = Prevent user from changing password
 NAD_RejectCommonPwd = Reject common passwords
-NAD_AllowusernameInPassword = Allow username in password
+NAD_AllowUsernameInPassword = Allow Username in Password
 NAD_ResetToCOS = Reset to COS value
 NAD_OverrideCOS = Override COS
 NAD_ResetToGlobal = Reset to Global value
@@ -1787,6 +1787,7 @@ ERROR_dlWithThisNameExists = Distribution list, resource, alias or account with 
 ERROR_MESSAGE_LIFETIME_BELOW_31 = Error! Message retention time has to be more than 30 days!
 ERROR_PASSWORD_REQUIRED = Must specify a password!
 ERROR_PASSWORD_MISMATCH = Passwords do not match!
+ERROR_PASSWORD_CONTAIN_USERNAME = Password cannot contain username.
 ERROR_PASSWORD_TOOLONG = Password is too long!
 ERROR_PASSWORD_TOOSHORT = Password is too short!
 ERROR_PASSWORD_INVALID = Password is invalid
