ZCS-12417:Add Mail Recall feature option in Admin Console
-Add mail recall check box and mail recall interval in COS, Domain, Account level.
-Mail recall Interval will be disable when Mail recall not checked.
-Dropdown from "1 minute" to "30 minutes".

--- a/WebRoot/messages/ZaMsg.properties
+++ b/WebRoot/messages/ZaMsg.properties
@@ -1013,6 +1013,8 @@ MSG_zimbraPrefReadReceiptsToAddress = Reply-to address for read receipt message
 LBL_zimbraPrefReadReceiptsToAddress = Reply-to address for read receipt message: 
 LBL_zimbraPrefMailSendReadReceipts = Send read receipts:
 LBL_zimbraFeatureReadReceiptsEnabled = Enable read receipts
+LBL_zimbraFeatureEnableMailRecall = Mail recall
+LBL_zimbraFeatureMailRecallInterval = Mail recall interval
 LBL_zimbraPrefMandatorySpellCheckEnabled = Enable mandatory spell check
 SEND_READ_RECEIPT_PROMPT = Prompt
 SEND_READ_RECEIPT_NEVER = Never
@@ -1022,6 +1024,7 @@ LBL_zimbraPrefOutOfOfficeCacheDuration = Out of office cache lifetime:
 MSG_zimbraPrefMailPollingInterval = Polling interval (time after which to check for new mail)
 LBL_asNewMailArrives = As New Mail Arrives
 LBL_manual = Manually
+LBL_min = minute
 LBL_minute = minutes
 LBL_zimbraPrefMailPollingInterval = Polling interval (time after which to check for new mail):
 MSG_zimbraMailMinPollingInterval = Minimum mail polling interval
