--- a/WebRoot/messages/ZaMsg.properties
+++ b/WebRoot/messages/ZaMsg.properties
@@ -1024,8 +1024,9 @@ LBL_zimbraPrefOutOfOfficeCacheDuration = Out of office cache lifetime:
 MSG_zimbraPrefMailPollingInterval = Polling interval (time after which to check for new mail)
 LBL_asNewMailArrives = As New Mail Arrives
 LBL_manual = Manually
-LBL_min = minute
 LBL_minute = minutes
+LBL_recallminute = {0} minute
+LBL_recallminutes = {0} minutes
 LBL_zimbraPrefMailPollingInterval = Polling interval (time after which to check for new mail):
 MSG_zimbraMailMinPollingInterval = Minimum mail polling interval
 LBL_zimbraMailMinPollingInterval = Minimum mail polling interval:
