--- a/build.xml
+++ b/build.xml
@@ -89,7 +89,7 @@
 
     <property name="modernizr.version" value="2.8.3"/>
     <property name="jquery.version" value="3.5.1"/>
-    <property name="chartjs.version" value="2.9.3"/>
+    <property name="chartjs.version" value="4.1.2"/>
 
 	<!-- customize admin skin -->
 	<if>
@@ -1416,7 +1416,7 @@ ext = BeanUtils.cook(ext);
         <unzip src="${build.tmp.dir}/chartjs-${chartjs.version}.jar" dest="${build.tmp.dir}/chartjs" overwrite="true" />
 
         <copy todir="${3rdparty.dir}/chartjs">
-            <fileset dir="${build.tmp.dir}/chartjs/META-INF/resources/webjars/chartjs/${chartjs.version}" includes="*.js" excludes="webjars-requirejs.js" />
+            <fileset dir="${build.tmp.dir}/chartjs/META-INF/resources/webjars/chartjs/${chartjs.version}/dist" includes="*.umd.*" />
             <scriptmapper language="javascript">
                 // replace dots with underscores in JS file names, retaining the suffix
                 if (/\.js$/.test(source)) {
