--- a/WebRoot/messages/ZaMsg.properties
+++ b/WebRoot/messages/ZaMsg.properties
@@ -1141,6 +1141,8 @@ NAD_passMinLengthMsg_p = Minimum password length is {0} characters
 NAD_passMinLengthMsg_s = Minimum password length is {0} character
 LBL_zimbraMaxPwdLength = Maximum password length:
 MSG_zimbraMaxPwdLength = Maximum password length
+LBL_zimbraUsernameInPassword = Maximum password length:
+MSG_zimbraUsernameInPassword = Maximum password length
 NAD_passMaxLengthMsg_p = Maximum password length is {0} characters
 NAD_passMaxLengthMsg_s = Maximum password length is {0} character
 LBL_passMinAge = Minimum password age (Days):
@@ -1206,6 +1208,7 @@ NAD_ForwardTo = Forward mail to
 NAD_COSName = COS Name
 NAD_PwdLocked = Prevent user from changing password
 NAD_RejectCommonPwd = Reject common passwords
+NAD_AllowusernameInPassword = Allow username in password
 NAD_ResetToCOS = Reset to COS value
 NAD_OverrideCOS = Override COS
 NAD_ResetToGlobal = Reset to Global value
@@ -1773,6 +1776,7 @@ ERROR_INVALID_VALUE = Invalid Value!
 ERROR_INVALID_VALUE_FOR = Invalid Value for {0}
 ERROR_MAX_MIN_PWDLENGTH = Value of "Minimum Password Length" cannot be greater than value of "Maximum Password Length"
 ERROR_MAX_MIN_PWDAGE = Value of "Minimum Password Age" cannot be greater than value of "Maximum Password Age"
+ERROR_USERNAME_IN_PASSWORD = password cant contain Username.
 ERROR_ITEMS_PER_PAGE_OVER_MAX = Value of "Number of items to display per page" cannot be greater than the value of "Maximum number of items to display per page"!
 ERROR_VALUE_NOT_INTEGER= Value for {0} must be a valid integer.
 ERROR_UNKNOWN = Unknown error!
