--- a/WebRoot/messages/ZaMsg.properties
+++ b/WebRoot/messages/ZaMsg.properties
@@ -2556,6 +2556,17 @@ NAD_zimbraSMIMEFeature  = S/MIME Features
 LBL_zimbraFeatureManageSMIMECertificateEnabled = Allow end user to publish and remove S/MIME certificates
 LBL_zimbraFeatureSMIMEEnabled = Enable S/MIME
 
+NAD_zimbraResetPasswordFeature = Password Reset Feature
+LBL_zimbraFeatureResetPasswordStatus = Status of password reset feature:
+NAD_AccountRecoveryOptions = Account Recovery Options
+LBL_zimbraPrefPasswordRecoveryAddress = Recovery email address:
+MSG_zimbraPrefPasswordRecoveryAddress = Recovery email address
+LBL_zimbraPrefPasswordRecoveryAddressStatus = Recovery email address verification status:
+MSG_zimbraPrefPasswordRecoveryAddressStatus = Recovery email address verification status
+recoveryAddressNotEmptyError = Email address cannot be set when status is unset.
+recoveryAddressRequiredError = Email address must be set when status is verified.
+recoveryAddressStatusPendingNotAllowedError = Pending cannot be set by administrator.
+
 externalAccountNote = This account uses external mail transport
 
 NAD_ProxyAllowedDomains = Proxy Allowed Domains
@@ -2628,6 +2639,12 @@ NAD_WizConfigComplete = Auto-provision configuration complete
 NAD_Prov_ConfigSummary =  Summary of auto-provision settings
 LBL_setPassword = set
 LBL_unsetPassword =  unset
+LBL_unset = Not set
+LBL_enabled = Enabled
+LBL_suspended = Suspended
+LBL_disabled = Disabled
+LBL_pending = Pending
+LBL_verified = Verified
 LBL_ManualProvision = Manual provisioning
 LBL_ApplyButton = Apply
 LBL_ManualProvAccount = Account for manual provision
