ZCS-14347:HSM / S3 restriction based on license status - changed the error string ERROR_FEATURE_NOT_LICENSED

--- a/WebRoot/messages/ZaMsg.properties
+++ b/WebRoot/messages/ZaMsg.properties
@@ -2840,4 +2840,4 @@ LBL_zimbraSieveEditHeaderEnabled = Edit header commands:
 LBL_zimbraSieveRejectMailEnabled = Sieve "reject" action:
 NAD_AdminSieveGrouper = Sieve filter rules
 NAD_LegalInterceptGrouper = Legal Intercept
-ERROR_FEATURE_NOT_LICENSED = You are not currently licensed for this feature.<br><br> Please see Configure - Global Settings - License for more information.
+ERROR_FEATURE_NOT_LICENSED = Your license for this feature has expired or is not valid.<br><br> Please see Configure - Global Settings - License for more information.
