--- a/WebRoot/messages/ZaMsg.properties
+++ b/WebRoot/messages/ZaMsg.properties
@@ -2843,3 +2843,4 @@ LBL_zimbraSieveRejectMailEnabled = Sieve "reject" action:
 NAD_AdminSieveGrouper = Sieve filter rules
 NAD_LegalInterceptGrouper = Legal Intercept
 ERROR_FEATURE_NOT_LICENSED = You are not currently licensed for this feature.<br><br> Please see Configure - Global Settings - License for more information.
+LBL_ERROR_FEATURE_NOT_LICENSED = You are not currently licensed for this feature. Please see <u>Configure - Global Settings - License</u> for more information.
